<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">

    <ProgressBar
        android:id="@+id/loader"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".WeatherActivity">

            <TextView
                android:id="@+id/tvCity"
                style="@style/titleInfoFilm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text=""
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgPosition"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgIconCondition"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCity"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvTemp"
                style="@style/titleInfoFilm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="24dp"
                android:text="@string/tempSymbol"
                android:textSize="60sp"
                app:layout_constraintBottom_toBottomOf="@+id/imgIconCondition"
                app:layout_constraintEnd_toStartOf="@+id/imgIconCondition"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imgIconCondition"
                app:layout_constraintVertical_bias="0.571" />

            <TextView
                android:id="@+id/tvFeelsLike"
                style="@style/titleInfoFilm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/feels_like_temp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tvTemp"
                app:layout_constraintStart_toStartOf="@+id/tvTemp"
                app:layout_constraintTop_toBottomOf="@+id/tvTemp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                style="@style/containerLayoutInfoWeather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_bg_shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFeelsLike">

                <LinearLayout
                    style="@style/layoutInfoWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imgUvIndex"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:srcCompat="@drawable/uv_icon_64"/>


                    <TextView
                        android:id="@+id/tvIndexUvTitle"
                        style="@style/titleInfoFilm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uv_index" />

                    <TextView
                        android:id="@+id/tvUvIndex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    style="@style/layoutInfoWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgWind"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:srcCompat="@drawable/wind_icon_64" />

                    <TextView
                        android:id="@+id/tvWindTitle"
                        style="@style/titleInfoFilm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind" />

                    <TextView
                        android:id="@+id/tvWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vel" />
                </LinearLayout>

                <LinearLayout
                    style="@style/layoutInfoWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgHumidity"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:srcCompat="@drawable/humidity_icon_64" />

                    <TextView
                        android:id="@+id/tvHumidityTitle"
                        style="@style/titleInfoFilm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity" />

                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidityMesure" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                style="@style/containerLayoutInfoWeather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_bg_shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <LinearLayout
                    style="@style/layoutInfoWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imgCloud"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:srcCompat="@drawable/cloud_icon_64" />

                    <TextView
                        android:id="@+id/tvCloudTitles"
                        style="@style/titleInfoFilm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clouds" />

                    <TextView
                        android:id="@+id/tvCloud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    style="@style/layoutInfoWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgWindDirection"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:srcCompat="@drawable/wind_direction_icon_64" />

                    <TextView
                        android:id="@+id/tvWindDirectionTitle"
                        style="@style/titleInfoFilm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="4dp"
                        android:text="@string/wind_direction"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvWindDirection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    style="@style/layoutInfoWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgPrecip"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:srcCompat="@drawable/precip_icon_64" />

                    <TextView
                        android:id="@+id/tvPrecipTitle"
                        style="@style/titleInfoFilm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:text="@string/rainfall"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvPrecip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/last_update"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
                app:layout_constraintStart_toStartOf="@+id/linearLayout2"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <ImageView
                android:id="@+id/imgPosition"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvCity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvCity"
                app:srcCompat="@drawable/position_icon_64" />


            <TextView
                android:id="@+id/tvTextCondition"
                style="@style/titleInfoFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/imgIconCondition"
                app:layout_constraintEnd_toEndOf="@+id/imgIconCondition"
                app:layout_constraintStart_toStartOf="@+id/imgIconCondition"
                app:layout_constraintTop_toBottomOf="@+id/tvCity" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>