<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loadingIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/scrollView"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/loadingIndicator"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/alfa_slab_one"
                android:gravity="center"
                android:textSize="34sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivPost"
                android:layout_width="0dp"
                android:layout_height="409dp"
                android:contentDescription="@string/image_post_film"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/btnFavorite"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_above="@id/ivPost"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/favorite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivPost"
                app:srcCompat="@drawable/ic_outline_favorite_border_24" />

            <TextView
                android:id="@+id/tvDescriptionTitle"
                style="@style/titleInfoFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPost" />

            <TextView
                android:id="@+id/tvDescription"
                style="@style/infoFilm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTitle" />

            <TextView
                android:id="@+id/tvDataTitle"
                style="@style/titleInfoFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                app:layout_constraintBottom_toBottomOf="@+id/tvData"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/tvData" />

            <TextView
                android:id="@+id/tvData"
                style="@style/infoFilm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toEndOf="@+id/tvDataTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

            <TextView
                android:id="@+id/tvLanguajeTitle"
                style="@style/titleInfoFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_languaje"
                app:layout_constraintBottom_toBottomOf="@+id/tvLanguaje"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/tvLanguaje" />

            <TextView
                android:id="@+id/tvLanguaje"
                style="@style/infoFilm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toEndOf="@+id/tvLanguajeTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvData" />

            <TextView
                android:id="@+id/tvAdultTitle"
                style="@style/titleInfoFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adult"
                app:layout_constraintBottom_toBottomOf="@+id/cbAdult"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/cbAdult" />

            <CheckBox
                android:id="@+id/cbAdult"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:checked="true"
                android:clickable="false"
                android:scaleX="0.9"
                android:scaleY="0.9"
                app:layout_constraintStart_toEndOf="@+id/tvAdultTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvLanguaje" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="30dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="30dp" />

            <TextView
                android:id="@+id/tvPopularityTitle"
                style="@style/titleInfoFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popularity"
                app:layout_constraintBottom_toBottomOf="@+id/tvPopularity"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/tvPopularity" />

            <TextView
                android:id="@+id/tvPopularity"
                style="@style/infoFilm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toEndOf="@+id/tvPopularityTitle"
                app:layout_constraintTop_toBottomOf="@+id/cbAdult" />

            <RatingBar
                android:id="@+id/rbScore"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/textColor"
                android:isIndicator="false"
                android:numStars="10"
                android:rating="0"
                android:stepSize="1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tvScoreTitle" />

            <TextView
                android:id="@+id/tvScoreTitle"
                style="@style/titleInfoFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Score"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tvPopularity" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>